<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/main_scroll_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_event_poster"
                android:layout_width="match_parent"
                android:layout_height="198dp"
                android:contentDescription="@string/poster_content_description"
                android:scaleType="centerCrop"
                android:src="@drawable/logo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/cardView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                app:layout_constraintLeft_toRightOf="parent"
                card_view:cardBackgroundColor="@color/colorCard"
                card_view:cardCornerRadius="3dp"
                card_view:cardElevation="4dp"
                card_view:cardUseCompatPadding="true"
                card_view:layout_constraintTop_toBottomOf="@+id/iv_event_poster">
                <!--card_view:layout_constraintTop_toBottomOf="@+id/visit_web">-->
                <!--card_view:layout_constraintTop_toBottomOf="@+id/eventFab">-->


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/event_name_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="The Social Shake-up"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/colorAccentDarker" />

                        <android.support.design.widget.FloatingActionButton
                            android:id="@+id/mark_as_favorite"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:layout_marginRight="8dp"
                            android:clickable="true"
                            app:srcCompat="@drawable/ic_favorite_border_96dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/like_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:orientation="vertical"
                        android:paddingRight="16dp">

                        <TextView
                            android:id="@+id/likeLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Likes"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/favoriteCount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="23"
                            android:textStyle="bold" />
                    </LinearLayout>


                    <TextView
                        android:id="@+id/event_date_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="6 October 2016"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/event_location_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Toronto, Ontario"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2" />

                    <TextView
                        android:id="@+id/event_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/nav_favorite_networks"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/visit_web"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_margin="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/button_background"
                android:text="Visit Page"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView2" />


        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <TextView
        android:id="@+id/tv_display_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/error_message"
        android:textSize="16sp"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/pb_loading_event"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_gravity="center"
        android:visibility="gone" />

</FrameLayout>